# gvdot

./: .gitattributes  .readthedocs.yaml  CHANGELOG.md  LICENSE  PYPI-check.py  PYPI.md  README-check.py  README.md  op.sh  pyproject.toml  setup.sh
.github/workflows/: test.yml  verify-pypi.yml  watch.yml  windows-timeout.yml
doc/: Makefile  api.rst  conf.py  discussion.rst  er-diagram.rst  examples.rst  index.rst  installation.rst  overview.rst  quicktour.rst  rb-trees.rst  reference.rst  resources.rst  userguide.rst
doc-gen/: artifacts.py  generate.py
doc/_code/discussion/: multigraph-stage1.dot.rst  multigraph-stage2.py.rst  project-roles-code.py.rst  rollback.dot.rst
doc/_code/index/: nfa-diagram.py.rst  nfa-generate.py.rst  nfa-model.py.rst  nfa-theme.py.rst
doc/_code/overview/: attrs.py.rst  multigraph-stage1.py.rst  multigraph-stage2.dot.rst  multigraph-stage3.dot.rst  multigraph-stage3.py.rst  project-model.py.rst  project-themes-code1.py.rst  theme-code1.py.rst  theme-theme1.py.rst
doc/_code/quicktour/: basic-construction.dot.rst  basic-construction.py.rst  default-attributes.dot.rst  default-attributes.py.rst  markup.dot.rst  markup.py.rst  method-chaining.dot.rst  method-chaining.py.rst  multigraphs.dot.rst  multigraphs.py.rst  nonces.dot.rst  nonces.py.rst  ports.dot.rst  ports.py.rst  roles.dot.rst  roles.py.rst  themes.dot.rst  themes.py.rst
doc/_static/css/: custom.css
doc/_static/index/: nfa-generate.py.rst
doc/_static/overview/: attrs.dot.rst  attrs.py.rst  change-mind.py.rst  rollback.py.rst  tasks-gen.py.rst  theme-code2.py.rst  theme-theme2.py.rst
examples/: README.md  er-diagram.ipynb  nfa.ipynb  quicktour.ipynb  red-black-tree.ipynb  tasks.ipynb
src/: gvdot.py
test/: README.md  core.py  dotcopy.py  frontend.py  identifiers.py  internals.py  main.py  render.py  show.py  styling.py  utility.py
util/: doc-examples.py
